remove irrelevant stainless messages

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -327,8 +327,6 @@ Now lets build the transaction with those data.
   val tx: Transaction = Await.result(signedTxF, 1 second)
 \end{lstlisting}
 
-\todo{kai: do you need more explanation?}
-
 Line one to seven creates a transaction builder which is then signed
 on line ten.  We can now use our transaction object on line twelve.
 For example, after calling \emph{hex} on it, we can send the returned
@@ -1380,31 +1378,7 @@ Running Stainless produces again new errors.
 Stainless output:
 \begin{lstlisting}[style=stainless]
 [Warning ] currency/CurrencyUnits.scala:36:3: Could not extract tree in class: case private class SatoshisImpl extends Satoshis with Product with Serializable {
-[Warning ]   <caseaccessor> <paramaccessor> private[this] val underlying: addition.modified.number.Int64 = _;
-[Warning ]   <stable> <caseaccessor> <accessor> <paramaccessor> def underlying: addition.modified.number.Int64 = SatoshisImpl.this.underlying;
-[Warning ]   def <init>(underlying: addition.modified.number.Int64): addition.modified.currency.Satoshis.SatoshisImpl = {
-[Warning ]     SatoshisImpl.super.<init>();
-[Warning ]     ()
-[Warning ]   };
-[Warning ]   <synthetic> def copy(underlying: addition.modified.number.Int64 = underlying): addition.modified.currency.Satoshis.SatoshisImpl = new SatoshisImpl(underlying);
-[Warning ]   <synthetic> def copy$default$1: addition.modified.number.Int64 = SatoshisImpl.this.underlying;
-[Warning ]   override <synthetic> def productPrefix: String = "SatoshisImpl";
-[Warning ]   <synthetic> def productArity: Int = 1;
-[Warning ]   <synthetic> def productElement(x$1: Int): Any = x$1 match {
-[Warning ]     case 0 => SatoshisImpl.this.underlying
-[Warning ]     case _ => throw new IndexOutOfBoundsException(x$1.toString())
-[Warning ]   };
-[Warning ]   override <synthetic> def productIterator: Iterator[Any] = runtime.this.ScalaRunTime.typedProductIterator[Any](SatoshisImpl.this);
-[Warning ]   <synthetic> def canEqual(x$1: Any): Boolean = x$1.$isInstanceOf[addition.modified.currency.Satoshis.SatoshisImpl]();
-[Warning ]   override <synthetic> def hashCode(): Int = ScalaRunTime.this._hashCode(SatoshisImpl.this);
-[Warning ]   override <synthetic> def toString(): String = ScalaRunTime.this._toString(SatoshisImpl.this);
-[Warning ]   override <synthetic> def equals(x$1: Any): Boolean = SatoshisImpl.this.eq(x$1.asInstanceOf[Object]).||(x$1 match {
-[Warning ]   case (_: addition.modified.currency.Satoshis.SatoshisImpl) => true
-[Warning ]   case _ => false
-[Warning ] }.&&({
-[Warning ]     <synthetic> val SatoshisImpl$1: addition.modified.currency.Satoshis.SatoshisImpl = x$1.asInstanceOf[addition.modified.currency.Satoshis.SatoshisImpl];
-[Warning ]     SatoshisImpl.this.underlying.==(SatoshisImpl$1.underlying).&&(SatoshisImpl$1.canEqual(SatoshisImpl.this))
-[Warning ]   }))
+...
 [Warning ] } (class scala.reflect.internal.Trees$ClassDef)
               private case class SatoshisImpl(underlying: Int64) extends Satoshis
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -1413,33 +1387,7 @@ Stainless output:
 And:
 \begin{lstlisting}[style=stainless]
 [Warning ] number/NumberType.scala:59:3: Could not extract tree in class: case private class Int64Impl extends Int64 with Product with Serializable {
-[Warning ]   <caseaccessor> <paramaccessor> private[this] val underlying: BigInt = _;
-[Warning ]   <stable> <caseaccessor> <accessor> <paramaccessor> def underlying: BigInt = Int64Impl.this.underlying;
-[Warning ]   def <init>(underlying: BigInt): addition.modified.number.Int64.Int64Impl = {
-[Warning ]     Int64Impl.super.<init>();
-[Warning ]     ()
-[Warning ]   };
-[Warning ]   scala.this.Predef.require(Int64Impl.this.underlying.>=(math.this.BigInt.long2bigInt(-9223372036854775808L)), "Number was too small for a int64, got: ".+(Int64Impl.this.underlying));
-[Warning ]   scala.this.Predef.require(Int64Impl.this.underlying.<=(math.this.BigInt.long2bigInt(9223372036854775807L)), "Number was too big for a int64, got: ".+(Int64Impl.this.underlying));
-[Warning ]   <synthetic> def copy(underlying: BigInt = underlying): addition.modified.number.Int64.Int64Impl = new Int64Impl(underlying);
-[Warning ]   <synthetic> def copy$default$1: BigInt = Int64Impl.this.underlying;
-[Warning ]   override <synthetic> def productPrefix: String = "Int64Impl";
-[Warning ]   <synthetic> def productArity: Int = 1;
-[Warning ]   <synthetic> def productElement(x$1: Int): Any = x$1 match {
-[Warning ]     case 0 => Int64Impl.this.underlying
-[Warning ]     case _ => throw new IndexOutOfBoundsException(x$1.toString())
-[Warning ]   };
-[Warning ]   override <synthetic> def productIterator: Iterator[Any] = runtime.this.ScalaRunTime.typedProductIterator[Any](Int64Impl.this);
-[Warning ]   <synthetic> def canEqual(x$1: Any): Boolean = x$1.$isInstanceOf[addition.modified.number.Int64.Int64Impl]();
-[Warning ]   override <synthetic> def hashCode(): Int = ScalaRunTime.this._hashCode(Int64Impl.this);
-[Warning ]   override <synthetic> def toString(): String = ScalaRunTime.this._toString(Int64Impl.this);
-[Warning ]   override <synthetic> def equals(x$1: Any): Boolean = Int64Impl.this.eq(x$1.asInstanceOf[Object]).||(x$1 match {
-[Warning ]   case (_: addition.modified.number.Int64.Int64Impl) => true
-[Warning ]   case _ => false
-[Warning ] }.&&({
-[Warning ]     <synthetic> val Int64Impl$1: addition.modified.number.Int64.Int64Impl = x$1.asInstanceOf[addition.modified.number.Int64.Int64Impl];
-[Warning ]     Int64Impl.this.underlying.==(Int64Impl$1.underlying).&&(Int64Impl$1.canEqual(Int64Impl.this))
-[Warning ]   }))
+...
 [Warning ] } (class scala.reflect.internal.Trees$ClassDef)
               private case class Int64Impl(underlying: BigInt) extends Int64 {
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
@@ -1692,36 +1640,25 @@ We can easily convert this Long value to a BigInt with a string literal paramete
 
 Finally, we get some output from Stainless about the verification in the code.
 
-\todo{kai special chars from stainless output what now?}
-% \begin{lstlisting}[style=stainless][Warning ] The Z3 native interface is not available. Falling back onto smt-z3.
-% [  Info  ]  - Checking cache: 'adt invariant' VC for apply @33:39...
-% [  Info  ]  - Checking cache: 'adt invariant' VC for apply @62:38...
-% [  Info  ] Cache miss: 'adt invariant' VC for apply @62:38...
-% [  Info  ] Cache hit: 'adt invariant' VC for apply @33:39...
-% [  Info  ]  - Now solving 'adt invariant' VC for apply @62:38...
-% [  Info  ]  - Result for 'adt invariant' VC for apply @62:38:
-% [Warning ]  => INVALID
-% [Warning ] Found counter-example:
-% [Warning ]   bigInt: BigInt -> -9223372036854775809
-% [  Info  ]  - Checking cache: 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36...
-% [  Info  ] Cache miss: 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36...
-% [  Info  ]  - Now solving 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36...
-% [  Info  ]  - Result for 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36:
-% [Warning ]  => INVALID
-% [Warning ] Found counter-example:
-% [Warning ]   num: Number   -> Int64Impl(9223372036854775807)
-% [Warning ]   thiss: Number -> Int64Impl(1)
-% [  Info  ]   ┌───────────────────┐
-% [  Info  ] ╔═╡ stainless summary ╞══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
-% [  Info  ] ║ └───────────────────┘                                                                                                                      ║
-% [  Info  ] ║ +      precond. (call checkResult(thiss, underlying(thiss) + u ...)  invalid           U:smt-z3  number/NumberType.scala:17:36       0.110 ║
-% [  Info  ] ║ apply  adt invariant                                                 valid from cache            currency/CurrencyUnits.scala:33:39  1.136 ║
-% [  Info  ] ║ apply  adt invariant                                                 invalid           U:smt-z3  number/NumberType.scala:62:38       0.394 ║
-% [  Info  ] ╟┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄╢
-% [  Info  ] ║ total: 3    valid: 1    (1 from cache) invalid: 2    unknown: 0    time:   1.640                                                           ║
-% [  Info  ] ╚════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
-% [  Info  ] Shutting down executor service.  
-% \end{lstlisting}
+\begin{lstlisting}[style=stainless]
+[  Info  ]  - Checking cache: 'adt invariant' VC for apply @33:39...
+[  Info  ]  - Checking cache: 'adt invariant' VC for apply @62:38...
+[  Info  ] Cache miss: 'adt invariant' VC for apply @62:38...
+[  Info  ] Cache hit: 'adt invariant' VC for apply @33:39...
+[  Info  ]  - Now solving 'adt invariant' VC for apply @62:38...
+[  Info  ]  - Result for 'adt invariant' VC for apply @62:38:
+[Warning ]  => INVALID
+[Warning ] Found counter-example:
+[Warning ]   bigInt: BigInt -> -9223372036854775809
+[  Info  ]  - Checking cache: 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36...
+[  Info  ] Cache miss: 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36...
+[  Info  ]  - Now solving 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36...
+[  Info  ]  - Result for 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36:
+[Warning ]  => INVALID
+[Warning ] Found counter-example:
+[Warning ]   num: Number   -> Int64Impl(9223372036854775807)
+[Warning ]   thiss: Number -> Int64Impl(1)
+\end{lstlisting}
 
 This shows that there is an invalid specification in checkResult and Stainless prints a counterexample for it.
 
@@ -1788,40 +1725,28 @@ Now we will look into the previous error.
 There is another problem with Bitcoin-S.
 Bitcoin-S-Core uses require as a fail-fast method whereas Stainless needs it to verify the code.
 
-Stainless output now: \todo{kai special chars again}
-% \begin{lstlisting}[style=stainless]
-% [Warning ] The Z3 native interface is not available. Falling back onto smt-z3.
-% [  Info  ]  - Checking cache: 'postcondition' VC for + @12:3...
-% [  Info  ]  - Checking cache: 'adt invariant' VC for apply @34:39...
-% [  Info  ]  - Checking cache: 'adt invariant' VC for apply @62:38...
-% [  Info  ] Cache miss: 'adt invariant' VC for apply @62:38...
-% [  Info  ] Cache hit: 'adt invariant' VC for apply @34:39...
-% [  Info  ] Cache hit: 'postcondition' VC for + @12:3...
-% [  Info  ]  - Now solving 'adt invariant' VC for apply @62:38...
-% [  Info  ]  - Result for 'adt invariant' VC for apply @62:38:
-% [Warning ]  => INVALID
-% [Warning ] Found counter-example:
-% [Warning ]   bigInt: BigInt -> -9223372036854775809
-% [  Info  ]  - Checking cache: 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36...
-% [  Info  ] Cache miss: 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36...
-% [  Info  ]  - Now solving 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36...
-% [  Info  ]  - Result for 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36:
-% [Warning ]  => INVALID
-% [Warning ] Found counter-example:
-% [Warning ]   num: Number   -> Int64Impl(9223372036854775807)
-% [Warning ]   thiss: Number -> Int64Impl(1)
-% [  Info  ]   ┌───────────────────┐
-% [  Info  ] ╔═╡ stainless summary ╞══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
-% [  Info  ] ║ └───────────────────┘                                                                                                                      ║
-% [  Info  ] ║ +      postcondition                                                 valid from cache            currency/CurrencyUnits.scala:12:3   1.266 ║
-% [  Info  ] ║ +      precond. (call checkResult(thiss, underlying(thiss) + u ...)  invalid           U:smt-z3  number/NumberType.scala:17:36       0.089 ║
-% [  Info  ] ║ apply  adt invariant                                                 valid from cache            currency/CurrencyUnits.scala:34:39  0.194 ║
-% [  Info  ] ║ apply  adt invariant                                                 invalid           U:smt-z3  number/NumberType.scala:62:38       0.348 ║
-% [  Info  ] ╟┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄╢
-% [  Info  ] ║ total: 4    valid: 2    (2 from cache) invalid: 2    unknown: 0    time:   1.897                                                           ║
-% [  Info  ] ╚════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
-% [  Info  ] Shutting down executor service.
-% \end{lstlisting}
+Stainless output now:
+\begin{lstlisting}[style=stainless]
+[  Info  ]  - Checking cache: 'postcondition' VC for + @12:3...
+[  Info  ]  - Checking cache: 'adt invariant' VC for apply @34:39...
+[  Info  ]  - Checking cache: 'adt invariant' VC for apply @62:38...
+[  Info  ] Cache miss: 'adt invariant' VC for apply @62:38...
+[  Info  ] Cache hit: 'adt invariant' VC for apply @34:39...
+[  Info  ] Cache hit: 'postcondition' VC for + @12:3...
+[  Info  ]  - Now solving 'adt invariant' VC for apply @62:38...
+[  Info  ]  - Result for 'adt invariant' VC for apply @62:38:
+[Warning ]  => INVALID
+[Warning ] Found counter-example:
+[Warning ]   bigInt: BigInt -> -9223372036854775809
+[  Info  ]  - Checking cache: 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36...
+[  Info  ] Cache miss: 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36...
+[  Info  ]  - Now solving 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36...
+[  Info  ]  - Result for 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36:
+[Warning ]  => INVALID
+[Warning ] Found counter-example:
+[Warning ]   num: Number   -> Int64Impl(9223372036854775807)
+[Warning ]   thiss: Number -> Int64Impl(1)
+\end{lstlisting}
 
 Corresponding code:
 \begin{lstlisting}[style=scala]
@@ -1969,65 +1894,6 @@ private case class Int64Impl(underlying: BigInt) extends Int64 {
 \end{lstlisting}
 
 
-
-
-
-% \begin{table}
-% \caption{Table captions should be placed above the
-% tables.}\label{tab1}
-% \begin{tabular}{|l|l|l|}
-% \hline
-% Heading level &  Example & Font size and style\\
-% \hline
-% Title (centered) &  {\Large\bfseries Lecture Notes} & 14 point, bold\\
-% 1st-level heading &  {\large\bfseries 1 Introduction} & 12 point, bold\\
-% 2nd-level heading & {\bfseries 2.1 Printing Area} & 10 point, bold\\
-% 3rd-level heading & {\bfseries Run-in Heading in Bold.} Text follows & 10 point, bold\\
-% 4th-level heading & {\itshape Lowest Level Heading.} Text follows & 10 point, italic\\
-% \hline
-% \end{tabular}
-% \end{table}
-
-
-% \noindent Displayed equations are centered and set on a separate
-% line.
-% \begin{equation}
-% x + y = z
-% \end{equation}
-% Please try to avoid rasterized images for line-art diagrams and
-% schemas. Whenever possible, use vector graphics instead (see
-% Fig.~\ref{fig1}).
-
-% \begin{figure}
-% \includegraphics[width=\textwidth]{fig1.eps}
-% \caption{A figure caption is always placed below the illustration.
-% Please note that short captions are centered, while long ones are
-% justified by the macro package automatically.} \label{fig1}
-% \end{figure}
-
-% \begin{theorem}
-% This is a sample theorem. The run-in heading is set in bold, while
-% the following text appears in italics. Definitions, lemmas,
-% propositions, and corollaries are styled the same way.
-% \end{theorem}
-% %
-% % the environments 'definition', 'lemma', 'proposition', 'corollary',
-% % 'remark', and 'example' are defined in the LLNCS documentclass as well.
-% %
-% \begin{proof}
-% Proofs, examples, and remarks have the initial word in italics,
-% while the following text appears in normal font.
-% \end{proof}
-% For citations of references, we prefer the use of square brackets
-% and consecutive numbers. Citations using labels or the author/year
-% convention are also acceptable. The following bibliography provides
-% a sample reference list with entries for journal
-% articles~\cite{ref_article1}, an LNCS chapter~\cite{ref_lncs1}, a
-% book~\cite{ref_book1}, proceedings without editors~\cite{ref_proc1},
-% and a homepage~\cite{ref_url1}. Multiple citations are grouped
-% \cite{ref_article1,ref_lncs1,ref_book1},
-% \cite{ref_article1,ref_book1,ref_proc1,ref_url1}.
-%
 
 
 \end{document}
